<?xml version="1.0"?>
<package format="3">
  <name>depth_to_pointcloud_pub</name>
  <version>0.0.1</version>
  <description>Convert depth image and camera_info to PointCloud2</description>

  <maintainer email="mhlee00@inha.edu">Minho Lee</maintainer>
  <license>MIT</license>

  <!--
  <buildtool_depend>ament_python</buildtool_depend>
  -->

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
