<?xml version="1.0"?>
<package format="3">
  <name>depth_to_pointcloud_pub</name>
  <version>0.0.1</version>
  <description>Convert depth image and camera_info to PointCloud2</description>

  <maintainer email="mhlee00@inha.edu">Minho Lee</maintainer>
  <license>MIT</license>

  
  <buildtool_depend>ament_python</buildtool_depend>
 
  <depend>rclcpp</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>ament_cmake_python</depend>
  <depend>pybind11_vendor</depend>


  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  
  
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
